# tiago-pickplace

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: AprilTagsDetection.action  PickPlace.action  RobotController.action  RobotNavigation.action  TaskStatus.action
config/: apriltags.yaml  tables.yaml  waypoints.yaml
include/: message_builder.h
include/apriltags_detection/: apriltags_detection.h  apriltags_detection_action.h
include/pick_place/: pick_place.h  pick_place_action.h
include/robot_controller/: robot_controller.h  robot_controller_action.h
include/robot_navigation/: robot_navigation.h  robot_navigation_action.h
include/task_status/: task_status.h  task_status_action.h
launch/: env.launch  rviz.launch  rviz_pp.launch  task.launch
rviz/: rviz_nav.rviz  rviz_pp.rviz
src/: message_builder.cpp  start_task.cpp
src/apriltags_detection/: apriltags_detection.cpp  apriltags_detection_action.cpp  apriltags_detection_action_server.cpp
src/pick_place/: pick_place.cpp  pick_place_action.cpp  pick_place_action_server.cpp
src/robot_controller/: robot_controller.cpp  robot_controller_action.cpp  robot_controller_action_server.cpp
src/robot_navigation/: robot_navigation.cpp  robot_navigation_action.cpp  robot_navigation_action_server.cpp
src/task_status/: task_status.cpp  task_status_action.cpp  task_status_action_server.cpp
